<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="500dp"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_article"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/plant_store_4" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/details_article_name"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_articles_name"
        android:layout_marginLeft="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2" />

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close"
        android:layout_marginRight="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView2" />

    <TextView
        android:id="@+id/details_article_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SubtitleTextStyle"
        android:text="@string/details_articles_price"
        app:layout_constraintStart_toStartOf="@+id/details_article_name"
        app:layout_constraintTop_toBottomOf="@+id/details_article_name" />

    <TextView
        android:id="@+id/details_article_ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/details_articles_ratings"
        style="@style/TitleTextStyle"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <RatingBar
        android:id="@+id/details_article_ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rating="@string/details_ratings"
        app:layout_constraintStart_toStartOf="@+id/details_article_ratings"
        app:layout_constraintTop_toBottomOf="@+id/details_article_ratings" />

    <TextView
        android:id="@+id/details_article_description_title"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_article_description"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@+id/details_article_ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/details_article_ratingBar" />

    <TextView
        android:id="@+id/details_article_description_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_articles_informations"
        style="@style/DefaultTextStyle"
        app:layout_constraintStart_toStartOf="@+id/details_article_description_title"
        app:layout_constraintTop_toBottomOf="@+id/details_article_description_title" />

    <View
        android:id="@+id/view_separation"
        android:layout_width="10dp"
        android:layout_height="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_article_description_info" />

    <ImageView
        android:id="@+id/add_cart_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_add_cart"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintEnd_toStartOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />

    <ImageView
        android:id="@+id/unlike_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:src="@drawable/ic_unlike"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintStart_toEndOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />

</androidx.constraintlayout.widget.ConstraintLayout>